refactor: remove retired capture state architecture